# rwa_calculator

./: .gitignore  .mcp.json  404.html  CLAUDE.md  LICENSE  README.md  implementation_plan_crr.md  index.html  mkdocs.yml  objects.inv  plan.md  pyproject.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yml  publish.yml
api/: index.html
api/configuration/: index.html
api/contracts/: index.html
api/domain/: index.html
api/engine/: index.html
api/pipeline/: index.html
appendix/: index.html
appendix/changelog/: index.html
appendix/glossary/: index.html
appendix/regulatory-references/: index.html
architecture/: index.html
architecture/components/: index.html
architecture/data-flow/: index.html
architecture/design-principles/: index.html
architecture/pipeline/: index.html
data-model/: index.html
data-model/data-validation/: index.html
data-model/input-schemas/: index.html
data-model/intermediate-schemas/: index.html
data-model/output-schemas/: index.html
data-model/regulatory-tables/: index.html
development/: index.html
development/benchmarks/: index.html
development/code-style/: index.html
development/documentation-conventions/: index.html
development/extending/: index.html
development/testing/: index.html
development/workbooks/: index.html
docs/: index.md
docs/api/: configuration.md  contracts.md  domain.md  engine.md  index.md  pipeline.md
docs/appendix/: changelog.md  glossary.md  index.md  regulatory-references.md
docs/architecture/: components.md  data-flow.md  design-principles.md  index.md  pipeline.md
docs/data-model/: data-validation.md  index.md  input-schemas.md  intermediate-schemas.md  output-schemas.md  regulatory-tables.md
docs/development/: benchmarks.md  code-style.md  documentation-conventions.md  extending.md  index.md  testing.md  workbooks.md
docs/features/: classification.md  index.md
docs/getting-started/: concepts.md  index.md  installation.md  quickstart.md
docs/plans/: counterparty-schema-remediation.md  implementation-plan.md  index.md  retail_airb_corporate_firb_plan.md  roadmap.md
docs/specifications/common/: hierarchy-classification.md
docs/user-guide/: configuration.md  index.md  interactive-ui.md
docs/user-guide/exposure-classes/: central-govt-central-bank.md  corporate.md  index.md  institution.md  other.md  retail.md  sovereign.md
docs/user-guide/methodology/: crm.md  index.md  irb-approach.md  specialised-lending.md  standardised-approach.md  supporting-factors.md
docs/user-guide/regulatory/: basel31.md  comparison.md  crr.md  index.md
features/: index.html
features/classification/: index.html
getting-started/: index.html
getting-started/concepts/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
plans/retail_airb_corporate_firb_plan/: index.html
plans/roadmap/: index.html
scripts/: README.md  deploy.py
search/: search_index.json
specifications/common/hierarchy-classification/: index.html
specifications/crr/credit-conversion-factors/: index.html
specifications/crr/credit-risk-mitigation/: index.html
specifications/crr/provisions/: index.html
src/rwa_calc/: __init__.py
src/rwa_calc/api/: __init__.py  errors.py  formatters.py  models.py  service.py  validation.py
src/rwa_calc/config/: __init__.py  fx_rates.py
src/rwa_calc/contracts/: __init__.py  bundles.py  config.py  errors.py  protocols.py  validation.py
src/rwa_calc/data/: schemas.py
src/rwa_calc/domain/: __init__.py  enums.py
src/rwa_calc/engine/: __init__.py  aggregator.py  aggregator_namespace.py  audit_namespace.py  ccf.py  classifier.py  fx_converter.py  hierarchy.py  hierarchy_namespace.py  loader.py  pipeline.py
src/rwa_calc/ui/: __init__.py
tests/acceptance/basel31/: __init__.py
tests/acceptance/crr/: __init__.py  conftest.py  test_scenario_crr_a_sa.py  test_scenario_crr_b_firb.py  test_scenario_crr_c_airb.py  (+6 more)
tests/benchmarks/: conftest.py  data_generators.py  test_hierarchy_benchmark.py  test_pipeline_benchmark.py
tests/contracts/: __init__.py  test_bundles.py  test_config.py  test_errors.py  test_protocols.py  test_validation.py
tests/expected_outputs/: expected_rwa.json
tests/fixtures/: generate_all.py
tests/integration/: test_pre_post_crm_reporting.py
tests/sample_data/: create_sample_data.py
tests/unit/: __init__.py  test_aggregator.py  test_aggregator_namespace.py  test_audit_namespace.py  test_ccf.py  test_classifier.py  test_collateral_allocation.py  test_corporate_to_retail_reclassification.py  test_fx_converter.py  test_hierarchy.py  test_hierarchy_namespace.py  test_irb_approach_selection.py  test_irb_lgd_collateral.py  test_irb_permissions.py  test_loader.py  test_pipeline.py  test_pipeline_validation.py  test_supporting_factors.py
user-guide/: index.html
user-guide/configuration/: index.html
user-guide/exposure-classes/: index.html
user-guide/interactive-ui/: index.html
user-guide/methodology/: index.html
user-guide/regulatory/: index.html
workbooks/: __init__.py
workbooks/basel31_expected_outputs/: __init__.py  main.py
workbooks/crr_expected_outputs/: __init__.py  generate_outputs.py  main.py
workbooks/rwa_expected_outputs/: __init__.py  main.py
workbooks/shared/: __init__.py  correlation.py  fixture_loader.py  irb_formulas.py
(+147 files in other folders)
