[project]
name = "rwa-calc"
version = "0.1.5"
description = "Basel 3.1 Credit Risk RWA Calculator compliant with PRA PS9/24"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "Apache-2.0"}
authors = [
    {name = "OpenAfterHours"}
]
maintainers = [
    {name = "OpenAfterHours"}
]
keywords = ["basel", "rwa", "credit-risk", "pra", "regulatory", "capital", "banking", "risk-management", "polars"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "polars>=1.0.0",
    "pydantic>=2.0.0",
    "duckdb>=0.9.0",
    "pyarrow>=14.0.0",
    "pyyaml>=6.0.0",
    "scipy>=1.10.0",  # Stats backend fallback (always available)
]

[project.scripts]
rwa-calc-ui = "rwa_calc.ui.marimo.server:main"

[project.urls]
Homepage = "https://github.com/OpenAfterHours/rwa_calculator"
Documentation = "https://OpenAfterHours.github.io/rwa_calculator/"
Repository = "https://github.com/OpenAfterHours/rwa_calculator.git"
Issues = "https://github.com/OpenAfterHours/rwa_calculator/issues"
Changelog = "https://github.com/OpenAfterHours/rwa_calculator/blob/master/docs/appendix/changelog.md"

[project.optional-dependencies]
fast-stats = [
    "polars-normal-stats>=0.1.0",  # Native Polars stats (faster, streaming-compatible)
]
ui = [
    "marimo>=0.5.0",
    "uvicorn>=0.27.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-mermaid2-plugin>=1.1.0",
    "mkdocstrings[python]>=0.24.0",
    "numpy>=1.26.0",  # For benchmark data generation only
]
all = [
    "rwa-calc[fast-stats,ui,dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rwa_calc"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["rwa_calc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --benchmark-skip"
markers = [
    "benchmark: mark test as a benchmark (deselect with --benchmark-skip)",
    "slow: mark test as slow (10M+ scale, may take several minutes)",
]

[tool.coverage.run]
source = ["src/rwa_calc"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocstrings[python]>=1.0.0",
    "mypy>=1.19.1",
    "pytest-benchmark>=5.2.3",
    "numpy>=1.26.0",  # For benchmark data generation only
]
